# ollama_operator

./: README.md  pyproject.toml
src/ollama_operator/: __init__.py  _http.py  _model_manager.py  async_client.py  client.py  exceptions.py  types.py
tests/: test_client.py  test_model_manager.py  test_types.py
